# os-wmacevoy-fall2023

./: LICENSE  exam1.txt  exam2.txt  hello.cpp
.devcontainer/: Dockerfile
events/: CMakeLists.txt  Makefile  gtest_hello.cpp
events/.devcontainer/: devcontainer.json
files/: Makefile  filter.cpp
gtest_hello/: gtest_hello.h  gtest_hello_main.cpp  gtest_hello_test.cpp
gtest_hello/.devcontainer/: Dockerfile
memory/dll/: Makefile  mysquare.c  mysquare.h  run.sh  test.c  test2.c
memory/shm/: Dockerfile  Makefile  message.h  receiver.cpp  sender.cpp
process/: Makefile  fork.c
threads/: files.cpp  files.py  threads.cpp
